fix #145 UI: canvas is too blurry

--- a/src/emulators-ui.css
+++ b/src/emulators-ui.css
@@ -11,7 +11,9 @@
 }
 
 .emulator-canvas, .emulator-video {
-    image-rendering: "crisp-edges";
+    image-rendering: -moz-crisp-edges;
+    image-rendering: -webkit-crisp-edges;
+    image-rendering: pixelated;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
